--- a/src/gui/settingsdialog.ui
+++ b/src/gui/settingsdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>344</width>
-    <height>113</height>
+    <height>139</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,6 +25,13 @@
     <widget class="QCheckBox" name="playRestingSound_checkBox">
      <property name="text">
       <string>play sound on resting time timeout</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="saveChangesOnExit_checkBox">
+     <property name="text">
+      <string>automatic save changes on exit</string>
      </property>
     </widget>
    </item>
