--- a/src/gui/taskeditdialog.ui
+++ b/src/gui/taskeditdialog.ui
@@ -94,6 +94,13 @@
          </property>
         </widget>
        </item>
+       <item row="4" column="1">
+        <widget class="QCheckBox" name="done_checkBox">
+         <property name="text">
+          <string>the task is done</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="timeList_tab">
@@ -228,6 +235,7 @@
   <tabstop>min_spinBox</tabstop>
   <tabstop>sec_spinBox</tabstop>
   <tabstop>desc_plainTextEdit</tabstop>
+  <tabstop>done_checkBox</tabstop>
   <tabstop>taskTime_treeWidget</tabstop>
   <tabstop>add_toolButton</tabstop>
   <tabstop>edit_toolButton</tabstop>
@@ -311,8 +319,8 @@
      <y>85</y>
     </hint>
     <hint type="destinationlabel">
-     <x>295</x>
-     <y>112</y>
+     <x>404</x>
+     <y>119</y>
     </hint>
    </hints>
   </connection>
