add tray icon notify

--- a/src/gui/settingsdialog.ui
+++ b/src/gui/settingsdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>344</width>
-    <height>139</height>
+    <height>184</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,6 +25,20 @@
     <widget class="QCheckBox" name="playRestingSound_checkBox">
      <property name="text">
       <string>play sound on resting time timeout</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="showWorkingTrayNotify_checkBox">
+     <property name="text">
+      <string>show tray notify on working time timeout</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="showRestingTrayNotify_checkBox">
+     <property name="text">
+      <string>show tray notify on resting time timeout</string>
      </property>
     </widget>
    </item>
@@ -60,6 +74,13 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>playWorkingSound_checkBox</tabstop>
+  <tabstop>playRestingSound_checkBox</tabstop>
+  <tabstop>showWorkingTrayNotify_checkBox</tabstop>
+  <tabstop>showRestingTrayNotify_checkBox</tabstop>
+  <tabstop>saveChangesOnExit_checkBox</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
