--- a/src/gui/propertiesdialog.ui
+++ b/src/gui/propertiesdialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>417</width>
+    <width>473</width>
     <height>124</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Properties</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
