--- a/src/gui/taskeditdialog.ui
+++ b/src/gui/taskeditdialog.ui
@@ -90,14 +90,14 @@
        <item row="1" column="1">
         <widget class="QCheckBox" name="useTimeLimit_checkBox">
          <property name="text">
-          <string>use limit time for the task</string>
+          <string>use limit time</string>
          </property>
         </widget>
        </item>
        <item row="4" column="1">
-        <widget class="QCheckBox" name="done_checkBox">
+        <widget class="QCheckBox" name="completed_checkBox">
          <property name="text">
-          <string>the task is done</string>
+          <string>completed</string>
          </property>
         </widget>
        </item>
@@ -105,7 +105,7 @@
      </widget>
      <widget class="QWidget" name="timeList_tab">
       <attribute name="title">
-       <string>Time list</string>
+       <string>Time intervals</string>
       </attribute>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
@@ -235,7 +235,7 @@
   <tabstop>min_spinBox</tabstop>
   <tabstop>sec_spinBox</tabstop>
   <tabstop>desc_plainTextEdit</tabstop>
-  <tabstop>done_checkBox</tabstop>
+  <tabstop>completed_checkBox</tabstop>
   <tabstop>taskTime_treeWidget</tabstop>
   <tabstop>add_toolButton</tabstop>
   <tabstop>edit_toolButton</tabstop>
